--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>FutureSound Audio</title>
+  <title>HoverRush – A Flying Car Sound UX Game</title>
   <style>
     html, body {
       margin: 0;
