--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-12NWYQB668"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'G-12NWYQB668');
+  </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>HoverRush by ATFCars</title>
@@ -20,8 +30,8 @@
       -moz-user-select: none;
       -ms-user-select: none;
       /* Requirement 3: Disable tap highlighting */
-       -webkit-tap-highlight-color: transparent;
-       text-align: center; /* Center all content horizontally */
+      -webkit-tap-highlight-color: transparent;
+      text-align: center; /* Center all content horizontally */
     }
 
     /* CTA Button Style */
