--- a/index.html
+++ b/index.html
@@ -462,9 +462,7 @@
 </style>
 </head>
 <body>
-
 <canvas id="backgroundCanvas"></canvas>
-
 <a class="cta-button" href="#about">Learn More</a>
 <div id="animatedBackground">
 <div class="flyingCar car1"></div>
@@ -1726,11 +1724,10 @@ function handleStartOrReplay() {
   });
 }
 </script>
+
 <script>
-// Background canvas for flying car silhouettes
 const backgroundCanvas = document.getElementById('backgroundCanvas');
 const bgCtx = backgroundCanvas.getContext('2d');
-
 let bgSwarm = [];
 
 function resizeBackgroundCanvas() {
@@ -1739,44 +1736,68 @@ function resizeBackgroundCanvas() {
 }
 
 function spawnSwarmVehicleBG() {
-  const size = 5 + Math.random() * 15;
+  const size = 20 + Math.random() * 30;
   bgSwarm.push({
-    x: Math.random() * backgroundCanvas.width,
+    x: backgroundCanvas.width + size,
     y: Math.random() * backgroundCanvas.height * 0.9,
-    width: size * (1.5 + Math.random() * 0.5),
-    height: size,
-    speed: 0.2 + Math.random() * 0.5,
-    color: `rgba(180, 200, 220, ${0.1 + Math.random() * 0.2})`,
+    width: size * 1.5,
+    height: size * 0.6,
+    speed: 0.3 + Math.random() * 0.7,
     bobPhase: Math.random() * Math.PI * 2,
     bobSpeed: 0.01 + Math.random() * 0.02,
-    bobAmplitude: 2 + Math.random() * 5
+    bobAmplitude: 2 + Math.random() * 4,
+    bodyColor: 'rgba(180, 220, 255, 0.5)',
+    glowColor: 'rgba(0, 200, 255, 0.3)'
   });
+}
+
+function drawHovercar(ctx, x, y, w, h, bodyColor, glowColor) {
+  ctx.save();
+  ctx.translate(x, y);
+  ctx.shadowBlur = 12;
+  ctx.shadowColor = glowColor;
+  ctx.fillStyle = bodyColor;
+
+  // Main body
+  ctx.beginPath();
+  ctx.ellipse(0, 0, w / 2, h / 2, 0, 0, Math.PI * 2);
+  ctx.fill();
+
+  // Cockpit dome
+  ctx.beginPath();
+  ctx.fillStyle = "rgba(255, 255, 255, 0.4)";
+  ctx.arc(0, -h * 0.2, w * 0.2, 0, Math.PI * 2);
+  ctx.fill();
+
+  // Left thruster
+  ctx.fillStyle = bodyColor;
+  ctx.fillRect(-w * 0.6, h * 0.1, w * 0.2, h * 0.3);
+
+  // Right thruster
+  ctx.fillRect(w * 0.4, h * 0.1, w * 0.2, h * 0.3);
+
+  ctx.restore();
 }
 
 function updateAndDrawBackground() {
   if (!bgCtx) return;
   bgCtx.clearRect(0, 0, backgroundCanvas.width, backgroundCanvas.height);
-  for (let vehicle of bgSwarm) {
-    vehicle.x -= vehicle.speed;
-    vehicle.bobPhase += vehicle.bobSpeed;
-    const y = vehicle.y + Math.sin(vehicle.bobPhase) * vehicle.bobAmplitude;
-    bgCtx.fillStyle = vehicle.color;
-    bgCtx.fillRect(vehicle.x, y, vehicle.width, vehicle.height * 0.6);
-    bgCtx.fillRect(vehicle.x - vehicle.width * 0.1, y - vehicle.height * 0.2, vehicle.width * 0.3, vehicle.height * 0.3);
-    bgCtx.fillRect(vehicle.x + vehicle.width * 0.8, y - vehicle.height * 0.2, vehicle.width * 0.3, vehicle.height * 0.3);
+  for (let car of bgSwarm) {
+    car.x -= car.speed;
+    car.bobPhase += car.bobSpeed;
+    const y = car.y + Math.sin(car.bobPhase) * car.bobAmplitude;
+    drawHovercar(bgCtx, car.x, y, car.width, car.height, car.bodyColor, car.glowColor);
   }
   bgSwarm = bgSwarm.filter(v => v.x + v.width > 0);
-  if (bgSwarm.length < 40 && Math.random() < 0.2) spawnSwarmVehicleBG();
+  if (bgSwarm.length < 25 && Math.random() < 0.4) spawnSwarmVehicleBG();
   requestAnimationFrame(updateAndDrawBackground);
 }
 
 window.addEventListener('resize', resizeBackgroundCanvas);
 document.addEventListener('DOMContentLoaded', () => {
   resizeBackgroundCanvas();
-  for (let i = 0; i < 30; i++) spawnSwarmVehicleBG();
+  for (let i = 0; i < 20; i++) spawnSwarmVehicleBG();
   updateAndDrawBackground();
 });
-</script>
-
-</body>
+</script></body>
 </html>
